--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@
   height: 80%;
   min-height: 50%;
   min-width: 40%;
-  border: 1px solid;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -36,48 +35,156 @@
 .weather-card {
   width: 100%;
   height: 90%;
-  border: 1px solid;
 }
 
 .weather-details {
   height: 40%;
   width: 100%;
-  border: 1px solid;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
 }
 
-.weather-forecast {
-  height: 60%;
-  width: 100%;
-  border: 1px solid;
+.weather-forecast-main {
   display: flex;
-  justify-content: center;
+  background: rgb(0, 0, 0, 0.7);
+  border-radius: 0.5rem;
+  height: 60%;
+  -webkit-box-align: center;
   align-items: center;
-  gap: 1rem;
-  padding: 0.5rem;
+  padding: 1rem;
+  box-shadow: 1px 5px 20px white;
+}
+
+.weather-forecast {
+    display: flex;
+    overflow-x: auto;
+    justify-content: center;
+    align-items: center;
+    max-width: 70rem;
+    margin: 0 auto;
+    height: 100%;
+    gap: 2rem;
+}
+
+.weather-forecast::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
 
 .forecast {
-  height: 80%;
-  width: 25%;
-  border: 1px solid;
+  height: 90%;
+  min-width: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 10px 10px 20px rgb(0, 0, 0);
+  border-radius: 1rem;
 }
 
-.temperature {
-  width: 30%;
-  height: 100%;
-  border: 1px solid;
+.forecast > span{
+  color: white;
+  font-size: 1.2rem;
+}
+
+.forecast-icon {
+  height: 100px;
 }
 
 .location {
   width: 30%;
   height: 100%;
-  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 20px black;
+  border-radius: 1rem;
+
 }
 
+.city-name {
+  font-size: 1.5rem;
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.city-date {
+  font-size: 1.2rem;
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+.city-time {
+  font-size: 2.5rem;
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+.city-status {
+  margin-top: 1rem;
+  font-size: 2rem;
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+.temperature {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 20px black;
+  border-radius: 1rem;
+
+}
+
+.weatherIcon {
+  width: 100px;
+  position: absolute;
+  top: 2rem;
+  right: 0;
+}
+
+.weatherIcon-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+
+}
+
+
+.country {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.region {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.farenheit {
+  font-size: 2.5rem;
+  color: white;
+}
+
+
+.celcius {
+  font-size: 4rem;
+  color: white;
+}
 
 .searchCity {
 width: 30%;
